angular front end additions

--- a/mean_npm/public/index.html
+++ b/mean_npm/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="meanhotel">
 <head>
   <title>MEAN hotel</title>
   <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -7,8 +7,7 @@
 </head>
 <body>
 
-  <h1>MEAN hotel homepage</h1>
-
+  <div ng-view></div>
   <footer class="footer">
     <div class="container">
       <p class="text-muted text-center">
@@ -22,6 +21,14 @@
   </footer>
 
   <script src="jquery/jquery-3.2.1.min.js"></script>
+  <script src="node_modules/angular/angular.js"></script>
+  <script src="node_modules/angular-route/angular-route.js"></script>
+  <script src="angular-app/app.js"></script>
+  <script src="angular-app/hotel-list/hotel-list-controller.js"></script>
+  <script src="angular-app/hotel-display/hotel-controller.js"></script>
+  <script src="angular-app/hotel-data-factory/hotel-data-factory.js"></script>
+  <script src="angular-app/hotel-rating/hotel-rating-directive.js"></script>
 
 </body>
+
 </html>
