--- a/mean_npm/public/index.html
+++ b/mean_npm/public/index.html
@@ -6,8 +6,10 @@
   <link href="css/custom.css" rel="stylesheet"/>
 </head>
 <body>
-
+  <mh-navigation></mh-navigation>
+  <div> class="container">
   <div ng-view></div>
+  </div>
   <footer class="footer">
     <div class="container">
       <p class="text-muted text-center">
@@ -22,12 +24,18 @@
 
   <script src="jquery/jquery-3.2.1.min.js"></script>
   <script src="node_modules/angular/angular.js"></script>
+  <script src="node_modules/angular-jwt/dist/angular-jwt.js"></script>
   <script src="node_modules/angular-route/angular-route.js"></script>
   <script src="angular-app/app.js"></script>
   <script src="angular-app/hotel-list/hotel-list-controller.js"></script>
   <script src="angular-app/hotel-display/hotel-controller.js"></script>
   <script src="angular-app/hotel-data-factory/hotel-data-factory.js"></script>
   <script src="angular-app/hotel-rating/hotel-rating-directive.js"></script>
+  <script src="angular-app/register/register-controller.js"></script>
+  <script src="angular-app/navigation-directive/navigation-directive.js"></script>
+  <script src="angular-app/login/login-controller.js"></script>
+  <script src="angular-app/auth/auth-factory.js"></script>
+  <script src="angular-app/auth/auth-interceptor.js"></script>
 
 </body>
 
